<resources>
    <string name="app_name">Donate Blood</string>
    <string name="google_play_services_error">Google Play Services Error</string>
    <string name="otp_verify">A OTP has been send to your mobile no. Please enter the OTP below to Verify your Mobile Number</string>
    <string name="verify_phn">We will send an SMS message to verify your phone number.Enter your country code and phone number.</string>
    <string name="hint_name">Enter Your Name</string>
    <string name="hint_spinner">Select the items</string>
    <string name="registrationheader">Registration Form Of Donor</string>
    <string name="hint_age">Enter Your Age. Age is in between 18 to 60</string>
    <string name="hint_weight">weight must be above 45 Kilograms</string>

    <string-array name="bloodgroup_arrays">
        <item>Select Blood Group </item>
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>O+</item>
        <item>O-</item>
        <item>AB+</item>
        <item>AB-</item>

    </string-array>

    <string-array name="country_arrays">
        <item>INDIA</item>
        <item>NIGERIA</item>
    </string-array>
    <string-array name="india_state_arrays">
        <item>Select Your State or Union territory</item>
        <item>Andaman and Nicobar Islands</item>
        <item>Andhra Pradesh </item>
        <item>Arunachal Pradesh</item>
        <item>Assam</item>
        <item>Bihar</item>
        <item>Chandigarh</item>
        <item>Chhattisgarh</item>
        <item>Daman and Diu</item>
        <item>Dadra and Nagar Haveli</item>
        <item>Delhi</item>
        <item>Goa</item>
        <item>Gujarat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jammu and Kashmir</item>
        <item>Jharkhand</item>
        <item>Karnataka</item>
        <item>Kerala</item>
        <item>Lakshadweep</item>
        <item>Madhya Pradesh</item>
        <item>Maharashtra</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Odisha</item>
        <item>Puducherry</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        <item>Sikkim</item>
        <item>Tamil Nadu</item>
        <item>Telangana</item>
        <item>Tripura</item>
        <item>Uttar Pradesh</item>
        <item>Uttarakhand</item>
        <item>West Bengal</item>
    </string-array>
    <string-array name="nigeria_state_arrays">
        <item>Select Your State or Union territory</item>
        <item>Abia</item>
        <item>Adamawa</item>
        <item>Anambra</item>
        <item>Akwa Ibom</item>
        <item>Bauchi</item>
        <item>Bayelsa</item>
        <item>Benue</item>
        <item>Borno</item>
        <item>Cross River</item>
        <item>Delta</item>
        <item>Ebonyi</item>
        <item>Enugu</item>
        <item>Edo</item>
        <item>Ekiti</item>
        <item>Federal Capital Territory</item>
        <item>Gombe</item>
        <item>Imo</item>
        <item>Jigawa</item>
        <item>Kaduna</item>
        <item>Kano</item>
        <item>Katsina</item>
        <item>Kebbi</item>
        <item>Kogi</item>
        <item>Kwara</item>
        <item>Lagos</item>
        <item>Nasarawa</item>
        <item>Niger</item>
        <item>Ogun</item>
        <item>Ondo</item>
        <item>Osun</item>
        <item>Oyo</item>
        <item>Plateau</item>
        <item>Rivers</item>
        <item>Sokoto</item>
        <item>Taraba</item>
        <item>Yobe</item>
        <item>Zamfara</item>
    </string-array>

    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>
    <string name="chk_ios">NEVER</string>
    <string name="chk_never">NEVER</string>
    <string name="chk_abv">Above 3 months</string>
    <string name="chk_bel">Below 3 month</string>

</resources>
