<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.atrio.donateblood.ResigrationActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:isScrollContainer="true"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="15dp">
            <TextView
                android:id="@+id/tv_rg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registrationheader"
                android:padding="10dp"
                android:textColor="@color/colorAccent"
                android:textSize="19sp"
                android:typeface="normal"
                android:layout_marginStart="2dp" />



            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:layout_constraintHorizontal_bias="0.0">

                <EditText
                    android:id="@+id/input_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_name"
                    android:inputType="text" />

            </android.support.design.widget.TextInputLayout>

            <Spinner
                android:id="@+id/input_age"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog" />
            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/colorAccent"/>
            <Spinner
                android:id="@+id/input_weight"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog" />
            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/colorAccent"/>
            <Spinner
                android:id="@+id/spin_bloodGrp"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/bloodgroup_arrays"
                android:spinnerMode="dialog"/>
            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/colorAccent"/>

            <Spinner
                android:id="@+id/spin_country"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/country_arrays"
                android:spinnerMode="dialog" />
            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/colorAccent"/>
            <Spinner
                android:id="@+id/spin_state"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/state_arrays"
                android:spinnerMode="dialog" />
            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/colorAccent"/>
            <com.atrio.donateblood.CustomAutoCompleteTextView
                android:id="@+id/atv_places"
                android:layout_width="match_parent"
             android:padding="10dp"
                android:layout_height="wrap_content"
                android:hint="Search city"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:padding="5dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Gender :"
                    android:padding="10dp" />


                <RadioGroup
                    android:id="@+id/radioSex"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"

                    android:layout_weight="1">

                    <RadioButton
                        android:id="@+id/radioMale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/radio_male"
                        android:padding="5dp"
                        android:checked="true" />

                    <RadioButton
                        android:id="@+id/radioFemale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/radio_female" />

                </RadioGroup>

            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Do you ever donate blood?"
                android:textSize="17sp"
                android:padding="3dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="3"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/cb_never"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/chk_never"
                    android:textSize="12dp" />

                <CheckBox
                    android:id="@+id/cb_above"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/chk_abv"
                    android:textSize="12dp" />

                <CheckBox
                    android:id="@+id/cb_below"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/chk_bel"
                    android:textSize="12dp" />
            </LinearLayout>

            <Button
                android:id="@+id/bt_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ripple_effect"
                android:text="Register"
                android:textColor="@color/white" />

        </LinearLayout>


    </ScrollView>


</android.support.constraint.ConstraintLayout>
